test/sema/typeck/generic/type-param-bounds-3.out
error: type `T` does not implement trait `MyTraitB`.
--> type-param-bounds-3.dora:6:31
 | class Baz[X]
 | impl[X] Baz[X] {
 |     fn bar[T: MyTraitA](_arg: Foo[T]) {}
                                 ~~~
 | }
 | 
1 error found.
